--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 <title>PageSpeed Practice</title>
 </head>
 <body>
-<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css?v=1234" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous" lazyload>
-<link rel="stylesheet" href="side-menu.css" lazyload>
 <div id="layout">
     <!-- Menu toggle -->
     <a href="#menu" id="menuLink" class="menu-link">
@@ -72,6 +70,8 @@
         </div>
     </div>
 </div>
+<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous" lazyload>
+<link rel="stylesheet" href="side-menu.css" lazyload>
 <script async src="script.js"></script>
 <script async src="moment.js"></script>  
 </body></html>
