--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 </div>
 <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous" lazyload>
 <link rel="stylesheet" href="side-menu.css" lazyload>
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" lazyload>
 <script async src="script.js"></script>
 <script async src="moment.js"></script>  
 </body></html>
