--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         </div>
     </div>
 </div>
-<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous" media="bogus">
+<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
 <link rel="stylesheet" href="side-menu.css" media="bogus">
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" media="bogus">
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <script async src="script.js"></script>
 <script async src="moment.js"></script>  
 </body></html>
