--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PageSpeed Practice</title>
+<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
+<link rel="stylesheet" href="side-menu.css">
 </head>
 <body>
 <div id="layout">
@@ -70,8 +72,6 @@
         </div>
     </div>
 </div>
-<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
-<link rel="stylesheet" href="side-menu.css" media="bogus">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <script async src="script.js"></script>
 <script async src="moment.js"></script>  
