--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <script async src="moment.js"></script>  
 </head>
 <body>
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" lazyload>
-<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous" lazyload>
-<link rel="stylesheet" href="side-menu.css" lazyload>
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" media="none">
+<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous" media="none">
+<link rel="stylesheet" href="side-menu.css" media="none">
 <div id="layout">
     <!-- Menu toggle -->
     <a href="#menu" id="menuLink" class="menu-link">
