--- a/index.html
+++ b/index.html
@@ -7,13 +7,8 @@
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="0" />
 <title>PageSpeed Practice</title>
-<script async src="script.js"></script>
-<script async src="moment.js"></script>  
 </head>
 <body>
-<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" media="none">
-<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous" media="none">
-<link rel="stylesheet" href="side-menu.css" media="none">
 <div id="layout">
     <!-- Menu toggle -->
     <a href="#menu" id="menuLink" class="menu-link">
@@ -41,7 +36,7 @@
             <h1>PageSpeed Excercise</h1>
             <h2>Implement best practices for web performance.</h2>
             <h2>
-            <script>document.write(moment().format('MMMM Do YYYY'))</script>            
+            <script>window.onload = function() { document.write(moment().format('MMMM Do YYYY')) };</script>            
             </h2>
         </div>
 
@@ -78,4 +73,10 @@
         </div>
     </div>
 </div>
+    
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
+<link rel="stylesheet" href="side-menu.css">
+<script async src="script.js"></script>
+<script async src="moment.js"></script>  
 </body></html>
