--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <script async src="moment.js"></script>  
 <style>
     @import url('https://fonts.googleapis.com/css?family=Roboto');
-    @import 'https://unpkg.com/purecss@0.6.2/build/pure-min.css'
-    @import 'side-menu.css';
+    @import url('https://unpkg.com/purecss@0.6.2/build/pure-min.css')
+    @import url('side-menu.css');
 </style>
 <div id="layout">
     <!-- Menu toggle -->
