--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
 <title>PageSpeed Practice</title>
+    <link rel="stylesheet" type="text/css" href="theme.css">
+    <script async src="moment.js"></script>  
 </head>
 <body>
-<script async src="moment.js"></script>  
-<style>
-    @import url('https://fonts.googleapis.com/css?family=Roboto');
-    @import url('https://unpkg.com/purecss@0.6.2/build/pure-min.css');
-    @import url('side-menu.css');
-</style>
 <div id="layout">
     <!-- Menu toggle -->
     <a href="#menu" id="menuLink" class="menu-link">
