--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PageSpeed Practice</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
     <script async src="moment.js"></script>  
+    <script async src="script.js"></script>
 </head>
 <body>
+<link rel="stylesheet" type="text/css" href="style.css" lazyload>
 <div id="layout">
     <!-- Menu toggle -->
     <a href="#menu" id="menuLink" class="menu-link">
@@ -72,5 +73,4 @@
         </div>
     </div>
 </div>
-<script async src="script.js"></script>
 </body></html>
