--- a/index.html
+++ b/index.html
@@ -3,19 +3,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PageSpeed Practice</title>
-    <script async src="moment.js"></script>  
+<title>PageSpeed Practice</title>  
     <script async src="script.js"></script>
 </head>
 <body>
-<link rel="stylesheet" type="text/css" href="style.css" lazyload>
 <div id="layout">
     <!-- Menu toggle -->
-    <a href="#menu" id="menuLink" class="menu-link">
-        <!-- Hamburger icon -->
-        <span></span>
-    </a>
-
+    <a href="#menu" id="menuLink" class="menu-link"> </a>
     <div id="menu">
         <div class="pure-menu pure-menu-open">
             <a class="pure-menu-heading" href="#" style="font-family:sans-serif">Excercise</a>
@@ -53,16 +47,16 @@
 
             <div class="pure-g">
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/e15/10948794_523766494432191_181942170_n.jpg">
+                    <img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/s200x200/10948794_523766494432191_181942170_n.jpg">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/e15/11296875_1576154892651065_104049781_n.jpg">
+                    <img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/s200x200/11296875_1576154892651065_104049781_n.jpg">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/e15/11373836_977992532219941_1246945570_n.jpg">
+                    <img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/s200x200/11373836_977992532219941_1246945570_n.jpg">
                 </div>
                 <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="http://scontent-b-lax.cdninstagram.com/hphotos-xap1/t51.2885-15/10249317_657733337629239_1612782864_n.jpg">
+                    <img class="pure-img-responsive" src="http://scontent-lax3-1.cdninstagram.com/t51.2885-15/s200x200/10249317_657733337629239_1612782864_n.jpg">
                 </div>               
             </div>
 
@@ -73,4 +67,5 @@
         </div>
     </div>
 </div>
+<link rel="stylesheet" type="text/css" href="style.css">
 </body></html>
