--- a/index.html
+++ b/index.html
@@ -1,90 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>PageSpeed Practice</title>  
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PageSpeed Practice</title>  
 </head>
 <body>
 
-	<noscript id="deferred-styles">
-		<link rel="stylesheet" type="text/css" href="style.css"/>
-	</noscript>
+    <noscript id="deferred-styles">
+        <link rel="stylesheet" type="text/css" href="style.css"/>
+    </noscript>
 
-	<div id="layout">
-		<!-- Menu toggle -->
-		<a href="#menu" id="menuLink" class="menu-link"> </a>
-		<div id="menu">
-			<div class="pure-menu pure-menu-open">
-				<a class="pure-menu-heading" href="#" style="font-family:sans-serif">Excercise</a>
+    <div id="layout">
+        <!-- Menu toggle -->
+        <a href="#menu" id="menuLink" class="menu-link"> </a>
+        <div id="menu">
+            <div class="pure-menu pure-menu-open">
+                <a class="pure-menu-heading" href="#" style="font-family:sans-serif">Excercise</a>
 
-				<ul class="pure-menu-list">
-					<li><a href="#main" class="pure-menu-link" style="font-family:sans-serif">PageSpeed</a></li>
-					<li class="menu-item-divided">
-						<a href="#howto" class="pure-menu-link" style="font-family:sans-serif">Why use them</a>
-					</li>
-					<li class="menu-item-divided">
-						<a href="#resizing" class="pure-menu-link" style="font-family:sans-serif">Resize your browser</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-		<div id="main">
-			<div class="header">
-				<h1>PageSpeed Excercise</h1>
-				<h2>Implement best practices for web performance.</h2>
-				<h2 id="date-heading"></h2>
-			</div>
+                <ul class="pure-menu-list">
+                    <li><a href="#main" class="pure-menu-link" style="font-family:sans-serif">PageSpeed</a></li>
+                    <li class="menu-item-divided">
+                        <a href="#howto" class="pure-menu-link" style="font-family:sans-serif">Why use them</a>
+                    </li>
+                    <li class="menu-item-divided">
+                        <a href="#resizing" class="pure-menu-link" style="font-family:sans-serif">Resize your browser</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div id="main">
+            <div class="header">
+                <h1>PageSpeed Excercise</h1>
+                <h2>Implement best practices for web performance.</h2>
+                <h2 id="date-heading"></h2>
+            </div>
 
-			<div id="howto" class="content">
-				<h2 class="content-subhead">Why use the PageSpeed tools</h2>
-				<p>
-					Fast and optimized pages lead to higher visitor engagement, retention, and conversions. The PageSpeed family of tools is designed to help you optimize the performance of your website. PageSpeed Insights products will help you identify performance best practices that can be applied to your site, and PageSpeed optimization tools can help you automate the process. For more visit <a href="https://developers.google.com/speed/pagespeed/">https://developers.google.com/speed/pagespeed/</a>
-				</p>
+            <div id="howto" class="content">
+                <h2 class="content-subhead">Why use the PageSpeed tools</h2>
+                <p>
+                    Fast and optimized pages lead to higher visitor engagement, retention, and conversions. The PageSpeed family of tools is designed to help you optimize the performance of your website. PageSpeed Insights products will help you identify performance best practices that can be applied to your site, and PageSpeed optimization tools can help you automate the process. For more visit <a href="https://developers.google.com/speed/pagespeed/">https://developers.google.com/speed/pagespeed/</a>
+                </p>
 
-				<h2 id="latin" class="content-subhead">Now Let's Speak Some Latin</h2>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
+                <h2 id="latin" class="content-subhead">Now Let's Speak Some Latin</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
 
-				<div class="pure-g">
-					<div class="pure-u-1-4">
-						<img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/s200x200/10948794_523766494432191_181942170_n.jpg">
-					</div>
-					<div class="pure-u-1-4">
-						<img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/s200x200/11296875_1576154892651065_104049781_n.jpg">
-					</div>
-					<div class="pure-u-1-4">
-						<img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/s200x200/11373836_977992532219941_1246945570_n.jpg">
-					</div>
-					<div class="pure-u-1-4">
-						<img class="pure-img-responsive" src="http://scontent-lax3-1.cdninstagram.com/t51.2885-15/s200x200/10249317_657733337629239_1612782864_n.jpg">
-					</div>               
-				</div>
+                <div class="pure-g">
+                    <div class="pure-u-1-4">
+                        <img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/s200x200/10948794_523766494432191_181942170_n.jpg">
+                    </div>
+                    <div class="pure-u-1-4">
+                        <img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/s200x200/11296875_1576154892651065_104049781_n.jpg">
+                    </div>
+                    <div class="pure-u-1-4">
+                        <img class="pure-img-responsive" src="https://scontent-lax3-1.cdninstagram.com/t51.2885-15/s200x200/11373836_977992532219941_1246945570_n.jpg">
+                    </div>
+                    <div class="pure-u-1-4">
+                        <img class="pure-img-responsive" src="http://scontent-lax3-1.cdninstagram.com/t51.2885-15/s200x200/10249317_657733337629239_1612782864_n.jpg">
+                    </div>               
+                </div>
 
-				<h2 id="resizing" class="content-subhead">Try Resizing your Browser</h2>
-				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
-			</div>
-		</div>
-	</div>
-	<script type='text/javascript' async=false defer=false src='script.js'></script>
-	<script type="text/javascript">
-	window.onload = function() {
-    		var heading = document.getElementById('date-heading');
-    		heading.innerHTML = moment().format('MMMM Do YYYY');
-    	}
-    	var loadDeferredStyles = function() {
-    		var addStylesNode = document.getElementById("deferred-styles");
-    		var replacement = document.createElement("div");
-    		replacement.innerHTML = addStylesNode.textContent;
-    		document.body.appendChild(replacement)
-    		addStylesNode.parentElement.removeChild(addStylesNode);
-    	};
-    	var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-    	webkitRequestAnimationFrame || msRequestAnimationFrame;
-    	if (raf) raf(function() { window.setTimeout(loadDeferredStyles, 0); });
-    	else window.addEventListener('load', loadDeferredStyles);
-    </script>
+                <h2 id="resizing" class="content-subhead">Try Resizing your Browser</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+            </div>
+        </div>
+    </div>
+    <script type='text/javascript' async=false defer=false src='script.js'></script>
+    <script type="text/javascript">
+        var loadDeferredStyles = function() {
+            var addStylesNode = document.getElementById("deferred-styles");
+            var replacement = document.createElement("div");
+            replacement.innerHTML = addStylesNode.textContent;
+            document.body.appendChild(replacement)
+            addStylesNode.parentElement.removeChild(addStylesNode);
+            var heading = document.getElementById('date-heading');
+            heading.innerHTML = moment().format('MMMM Do YYYY');
+        };
+
+        var raf = requestAnimationFrame || mozRequestAnimationFrame || webkitRequestAnimationFrame || msRequestAnimationFrame;
+        
+        if (raf) {
+            raf(function() {window.setTimeout(loadDeferredStyles, 0);});
+        } else {
+           window.addEventListener('load', loadDeferredStyles); 
+        }
+   </script>
 </body></html>
