--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PageSpeed Practice</title>  
+    <title>PageSpeed Practice</title>
+    <link rel="stylesheet" type="text/css" href="style.css" onload="if(media!='all')media='all'" />
 </head>
 <body>
     <div id="layout">
@@ -74,20 +75,5 @@
         scr.async = true;
 
         head.insertBefore(scr, head.firstChild);
-        var loadDeferredStyles = function() {
-            var addStylesNode = document.getElementById("deferred-styles");
-            var replacement = document.createElement("div");
-            replacement.innerHTML = addStylesNode.textContent;
-            document.body.appendChild(replacement)
-            addStylesNode.parentElement.removeChild(addStylesNode);
-        };
-
-        var raf = requestAnimationFrame || mozRequestAnimationFrame || webkitRequestAnimationFrame || msRequestAnimationFrame;
-        
-        if (raf) {
-            raf(function() {window.setTimeout(loadDeferredStyles, 0);});
-        } else {
-            window.addEventListener('load', loadDeferredStyles); 
-        }
     </script>
 </body></html>
