--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PageSpeed Practice</title>
-    <link rel="stylesheet" type="text/css" href="style.css" onload="if(media!='all')media='all'" />
+    <link rel="stylesheet" type="text/css" href="style.css" media="none" onload="if(media!='all')media='all'" />
 </head>
 <body>
     <div id="layout">
