--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PageSpeed Practice</title>
+    <link rel="stylesheet" href="style.css" media="bogus">
 </head>
 <body>
     <div id="layout">
@@ -72,5 +73,5 @@
 
         head.insertBefore(scr, head.firstChild);
     </script>
-    <link rel="stylesheet" type="text/css" href="style.css" media="none" onload="if(media!='all')media='all'" />
+    <link rel="stylesheet" href="style.css">
 </body></html>
