--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PageSpeed Practice</title>
-    <link rel="preload" href="style.css" as="style">
+    <link id="styletag" rel="preload" href="style.css" as="style">
     <noscript><link rel="stylesheet" href="style.css"></noscript>
 </head>
 <body>
